crates/oxc_react_compiler/tests/snapshots/jsx-outlining-child-stored-in-id.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-outlining-child-stored-in-id.js
---
import { c as _c } from "react/compiler-runtime";
// @enableJsxOutlining
function Component(t0) {
	const $ = _c(3);
	const { arr } = t0;
	const x = useX();
	let t1;
	if ($[0] !== arr || $[1] !== x) {
		t1 = arr.map((i) => {
			arr.map((i_0, id) => {
				const T0 = _temp;
				const child = <T0 i={i_0} x={x} />;
				const jsx = <div>{child}</div>;
				return jsx;
			});
		});
		$[0] = arr;
		$[1] = x;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
function _temp(t0) {
	let { "i": i, "x": x } = t0;
	return <Bar x={x}><Baz i={i} /></Bar>;
}
function Bar(t0) {
	const $ = _c(3);
	const { x, children } = t0;
	let t1;
	if ($[0] !== children || $[1] !== x) {
		t1 = <>{x}{children}</>;
		$[0] = children;
		$[1] = x;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
function Baz(t0) {
	const $ = _c(2);
	const { i } = t0;
	let t1;
	if ($[0] !== i) {
		t1 = <>{i}</>;
		$[0] = i;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
function useX() {
	return "x";
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ arr: ["foo", "bar"] }]
};
