crates/oxc_react_compiler/tests/snapshots/jsx-outlining-dupe-attr-after-rename.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-outlining-dupe-attr-after-rename.js
---
import { c as _c } from "react/compiler-runtime";
// @enableJsxOutlining
function Component(t0) {
	const $ = _c(7);
	const { arr } = t0;
	const x = useX();
	let t1;
	if ($[0] !== arr || $[1] !== x) {
		let t2;
		if ($[3] !== x) {
			t2 = (i, id) => {
				const T0 = _temp;
				return <T0 k={i + "i"} k1={i + "j"} k12={i + "j"} key={id} x={x} />;
			};
			$[3] = x;
			$[4] = t2;
		} else {
			t2 = $[4];
		}
		t1 = arr.map(t2);
		$[0] = arr;
		$[1] = x;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	let t2;
	if ($[5] !== t1) {
		t2 = <>{t1}</>;
		$[5] = t1;
		$[6] = t2;
	} else {
		t2 = $[6];
	}
	return t2;
}
function _temp(t0) {
	let { "k": k, "k1": k1, "k12": k12, "x": x } = t0;
	return <Bar x={x}><Foo k={k} /><Foo k={k1} /><Baz k1={k12} /></Bar>;
}
function Bar(t0) {
	const $ = _c(3);
	const { x, children } = t0;
	let t1;
	if ($[0] !== children || $[1] !== x) {
		t1 = <>{x}{children}</>;
		$[0] = children;
		$[1] = x;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
function Baz(t0) {
	const { k1 } = t0;
	return k1;
}
function Foo(t0) {
	const { k } = t0;
	return k;
}
function useX() {
	return "x";
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ arr: ["foo", "bar"] }]
};
