crates/oxc_react_compiler/tests/snapshots/jsx-outlining-recompiles-outlined-component.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/jsx-outlining-recompiles-outlined-component.js
---
import { c as _c } from "react/compiler-runtime";
// @enableJsxOutlining
function Component(t0) {
	const $ = _c(13);
	const { items, label } = t0;
	let t1;
	if ($[0] !== items || $[1] !== label) {
		let t2;
		if ($[3] !== label) {
			t2 = (item) => {
				const T0 = _temp2;
				return <T0 item={item} label={label} />;
			};
			$[3] = label;
			$[4] = t2;
		} else {
			t2 = $[4];
		}
		t1 = items.map(t2);
		$[0] = items;
		$[1] = label;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	let t2;
	if ($[5] !== items || $[6] !== label) {
		let t3;
		if ($[8] !== label) {
			t3 = (item_0) => {
				const T0 = _temp;
				return <T0 item={item_0} label={label} />;
			};
			$[8] = label;
			$[9] = t3;
		} else {
			t3 = $[9];
		}
		t2 = items.map(t3);
		$[5] = items;
		$[6] = label;
		$[7] = t2;
	} else {
		t2 = $[7];
	}
	let t3;
	if ($[10] !== t1 || $[11] !== t2) {
		t3 = [t1, t2];
		$[10] = t1;
		$[11] = t2;
		$[12] = t3;
	} else {
		t3 = $[12];
	}
	return t3;
}
function _temp2(t0) {
	const $ = _c(5);
	const { "item": item, "label": label } = t0;
	let t1;
	if ($[0] !== item) {
		t1 = <Value item={item} />;
		$[0] = item;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	let t2;
	if ($[2] !== label || $[3] !== t1) {
		t2 = <Item label={label}>{t1}</Item>;
		$[2] = label;
		$[3] = t1;
		$[4] = t2;
	} else {
		t2 = $[4];
	}
	return t2;
}
function _temp(t0) {
	const $ = _c(5);
	const { "item": item, "label": label } = t0;
	let t1;
	if ($[0] !== item) {
		t1 = <StrongValue item={item} />;
		$[0] = item;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	let t2;
	if ($[2] !== label || $[3] !== t1) {
		t2 = <Item label={label}>{t1}</Item>;
		$[2] = label;
		$[3] = t1;
		$[4] = t2;
	} else {
		t2 = $[4];
	}
	return t2;
}
function Item(t0) {
	const $ = _c(3);
	const { label, children } = t0;
	let t1;
	if ($[0] !== children || $[1] !== label) {
		t1 = <div>{label}: {children}</div>;
		$[0] = children;
		$[1] = label;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
function Value(t0) {
	const { item } = t0;
	return item;
}
function StrongValue(t0) {
	const $ = _c(2);
	const { item } = t0;
	let t1;
	if ($[0] !== item) {
		t1 = <strong>{item}</strong>;
		$[0] = item;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		items: ["one", "two"],
		label: "item"
	}]
};
